--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.14",
+    "@types/three": "^0.160.0",
     "framer-motion": "^10.18.0",
     "maath": "^0.10.7",
     "react": "^18.2.0",
