--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@react-three/drei": "^9.93.0",
     "@react-three/fiber": "^8.15.14",
     "@types/three": "^0.160.0",
+    "animate.css": "^4.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "framer-motion": "^10.18.0",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
+    "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.160.0"
