--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "framer-motion": "^10.18.0",
     "maath": "^0.10.7",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.0",
