--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-on-screen": "^2.1.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.2",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
+    "react-type-animation": "^3.2.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "tsparticles": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
