--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/three": "^0.160.0",
     "animate.css": "^4.1.1",
     "cors": "^2.8.5",
+    "emailjs": "^4.0.3",
     "express": "^4.18.2",
     "framer-motion": "^10.18.0",
     "maath": "^0.10.7",
